[package]
name = "electrolyte"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "electrolyte_bin"
path = "src/main.rs"

[lib]
name = "electrolyte"
path = "src/lib.rs"

[dependencies]
ion-c-sys = "0.4"
base64 = "0.12"
bigdecimal = "0.2"
bytes = "0.4"
chrono = "0.4"
delegate = "0.5"
thiserror = "1.0"
nom = "7.1.1"
num-bigint = "0.3"
num-integer = "0.1.44"
num-traits = "0.2"
arrayvec = "0.7"
paste = "1.0"

[dev-dependencies]
rstest = "0.9"
walkdir = "2.3"
test-generator = "0.3"
pretty-hex = "0.2"
memmap = "0.7.0"
